# ChangeLog for sci-calculators/calculator
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-calculators/calculator/ChangeLog,v 1.31 2010/09/29 19:33:52 mr_bones_ Exp $

  29 Sep 2010; Michael Sterrett <mr_bones_@gentoo.org>
  -calculator-1.6.34.ebuild, -calculator-1.6.35.ebuild:
  clean old, dep-broken versions

  27 Jul 2010; Jeroen Roovers <jer@gentoo.org> calculator-1.6.36.ebuild:
  Stable for HPPA (bug #309199).

  15 Mar 2010; nixnut <nixnut@gentoo.org> calculator-1.6.36.ebuild:
  ppc stable #309199

  20 Jan 2010; Brent Baude <ranger@gentoo.org> calculator-1.6.36.ebuild:
  Marking calculator-1.6.36 ppc64 for bug 276854

  10 Apr 2009; Raúl Porcel <armin76@gentoo.org> calculator-1.6.34.ebuild,
  calculator-1.6.35.ebuild, calculator-1.6.36.ebuild:
  sparc/x86 stable wrt #263795

  03 Apr 2009; Brent Baude <ranger@gentoo.org> calculator-1.6.35.ebuild:
  Marking calculator-1.6.35 ppc64 stable for bug 263795

  31 Mar 2009; Jeroen Roovers <jer@gentoo.org> calculator-1.6.35.ebuild:
  Stable for HPPA (bug #263795).

  30 Mar 2009; Brent Baude <ranger@gentoo.org> calculator-1.6.35.ebuild:
  Marking calculator-1.6.35 ppc for bug 263795

*calculator-1.6.36 (21 Mar 2009)

  21 Mar 2009; Matti Bickel <mabi@gentoo.org> +calculator-1.6.36.ebuild:
  now REALLY use slot deps

*calculator-1.6.35 (01 Mar 2009)

  01 Mar 2009; Matti Bickel <mabi@gentoo.org> -calculator-1.6.30.ebuild,
  -calculator-1.6.31.ebuild, +calculator-1.6.35.ebuild:
  removed old builds, added new version using EAPI 1 slot deps, to avoid
  bumping when nothing really changed in the fox stable api. This will be the
  last bump for calculator-1.6

  05 Dec 2008; Raúl Porcel <armin76@gentoo.org> calculator-1.6.34.ebuild:
  sparc stable wrt #249286

  02 Dec 2008; Jeroen Roovers <jer@gentoo.org> calculator-1.6.34.ebuild:
  Stable for HPPA (bug #249286).

*calculator-1.6.34 (03 Oct 2008)
